[package]
authors = [
  "Kevin Kwok <antimatter15@gmail.com>",
  "Chris Couzens <ccouzens@gmail.com>",
  "Jung-Kwang Lee <ntoskrnl7@gmail.com>",
]
categories = ["api-bindings", "multimedia::images"]
description = "Higher-level bindings for Tesseract OCR"
documentation = "https://docs.rs/tesseract"
keywords = ["tesseract", "OCR", "bindings"]
license = "MIT"
name = "tesseract"
repository = "https://github.com/antimatter15/tesseract-rs"
version = "0.9.3"

[dependencies]
tesseract-plumbing = {git = "https://github.com/ntoskrnl7/tesseract-plumbing", branch = "main"}
tesseract-sys = {git = "https://github.com/ntoskrnl7/tesseract-sys"}
thiserror = "1.0"

[features]
default = []
enable-static = ["tesseract-plumbing/enable-static", "tesseract-sys/enable-static"]
